// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileTestCaseOptions.getBlendedMobileOptions should augment default versions when a provided versions array includes 'DEFAULT' 1`] = `
Array [
  "android 9",
  "android 10",
  "ios 12",
  "ios 14",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should remove appropriate platform versions when skipPlatform is used: Android only 1`] = `
Array [
  "android 10",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should replace default form factors when a formFactors array is provided 1`] = `
Array [
  "tablet",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should replace default keyboards when a keyboards array is provided 1`] = `
Array [
  "samsung",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should replace default versions when a populated versions array is provided 1`] = `
Array [
  "android 9",
  "ios 12",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should replace wildcard with all platforms: Wildcard 1`] = `
Array [
  "android 10",
  "ios 14",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should return default options when no overrides exist 1`] = `
Object {
  "formFactors": Array [
    "phone",
  ],
  "keyboards": Array [
    "apple",
    "gboard",
  ],
  "skipPlatform": undefined,
  "versions": Array [
    "android 10",
    "ios 14",
  ],
}
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should use defaults when provided an empty formFactors array 1`] = `
Array [
  "phone",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should use defaults when provided an empty keyboards array 1`] = `
Array [
  "apple",
  "gboard",
]
`;

exports[`MobileTestCaseOptions.getBlendedMobileOptions should use defaults when provided an empty versions array 1`] = `
Array [
  "android 10",
  "ios 14",
]
`;
